@@ -22,6 +22,7 @@ static struct ccx_decoders_common_settings_t *init_decoder_setting(
 	setting->extract = opt->extract;
 	setting->fullbin = opt->fullbin;
 	setting->no_rollup = opt->no_rollup;
+	setting->noscte20 = opt->noscte20;
 	memcpy(&setting->extraction_start,&opt->extraction_start,sizeof(struct ccx_boundary_time));
 	memcpy(&setting->extraction_end,&opt->extraction_end,sizeof(struct ccx_boundary_time));
 	setting->cc_to_stdout = opt->cc_to_stdout;
